@@ -26,15 +26,12 @@ import java.util.List;
 import java.util.Map;
 import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.Term;
-import org.apache.lucene.index.VectorEncoding;
-import org.apache.lucene.index.VectorSimilarityFunction;
 import org.apache.lucene.queries.function.FunctionScoreQuery;
 import org.apache.lucene.queries.function.FunctionValues;
 import org.apache.lucene.queries.function.ValueSource;
 import org.apache.lucene.queries.function.docvalues.BoolDocValues;
 import org.apache.lucene.queries.function.docvalues.DoubleDocValues;
 import org.apache.lucene.queries.function.docvalues.LongDocValues;
-import org.apache.lucene.queries.function.valuesource.ByteVectorSimilarityFunction;
 import org.apache.lucene.queries.function.valuesource.ConstNumberSource;
 import org.apache.lucene.queries.function.valuesource.ConstValueSource;
 import org.apache.lucene.queries.function.valuesource.DefFunction;
@@ -42,7 +39,6 @@ import org.apache.lucene.queries.function.valuesource.DivFloatFunction;
 import org.apache.lucene.queries.function.valuesource.DocFreqValueSource;
 import org.apache.lucene.queries.function.valuesource.DoubleConstValueSource;
 import org.apache.lucene.queries.function.valuesource.DualFloatFunction;
-import org.apache.lucene.queries.function.valuesource.FloatVectorSimilarityFunction;
 import org.apache.lucene.queries.function.valuesource.IDFValueSource;
 import org.apache.lucene.queries.function.valuesource.IfFunction;
 import org.apache.lucene.queries.function.valuesource.JoinDocFreqValueSource;
@@ -344,41 +340,7 @@ public abstract class ValueSourceParser implements NamedListInitializedPlugin {
           }
         });
     alias("sum", "add");
-    addParser(
-        "vectorSimilarity",
-        new ValueSourceParser() {
-          @Override
-          public ValueSource parse(FunctionQParser fp) throws SyntaxError {
-
-            VectorEncoding vectorEncoding = VectorEncoding.valueOf(fp.parseArg());
-            VectorSimilarityFunction functionName = VectorSimilarityFunction.valueOf(fp.parseArg());
-
-            int vectorEncodingFlag =
-                vectorEncoding.equals(VectorEncoding.BYTE)
-                    ? FunctionQParser.FLAG_PARSE_VECTOR_BYTE_ENCODING
-                    : 0;
-            ValueSource v1 =
-                fp.parseValueSource(
-                    FunctionQParser.FLAG_DEFAULT
-                        | FunctionQParser.FLAG_CONSUME_DELIMITER
-                        | vectorEncodingFlag);
-            ValueSource v2 =
-                fp.parseValueSource(
-                    FunctionQParser.FLAG_DEFAULT
-                        | FunctionQParser.FLAG_CONSUME_DELIMITER
-                        | vectorEncodingFlag);
-
-            switch (vectorEncoding) {
-              case FLOAT32:
-                return new FloatVectorSimilarityFunction(functionName, v1, v2);
-              case BYTE:
-                return new ByteVectorSimilarityFunction(functionName, v1, v2);
-              default:
-                throw new SyntaxError("Invalid vector encoding: " + vectorEncoding);
-            }
-          }
-        });
-
+    addParser("vectorSimilarity", new VectorSimilaritySourceParser());
     addParser(
         "product",
         new ValueSourceParser() {
